--- a/Lasagne - Conv Net-Multiple Batches.ipynb
+++ b/Lasagne - Conv Net-Multiple Batches.ipynb
@@ -11,20 +11,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import Python libraries\n",
     "import numpy as np\n",
@@ -41,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -54,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -74,20 +65,30 @@
     "# grad_clip = 10\n",
     "\n",
     "# Optimization hyperparams\n",
-    "LEARNING_RATE = 1e-2\n",
+    "# LEARNING_RATE = 1e-2\n",
+    "LEARNING_RATE = 0.045\n",
+    "\n",
+    "USE_OPTIMIZER = \"nesterov_momentum\"\n",
+    "# USE_OPTIMIZER = \"adam\"\n",
+    "# (1) Nesterov Momentum\n",
     "MOMENTUM = 0.9\n",
+    "# (2) Adam\n",
+    "beta1=0.9\n",
+    "beta2=0.999\n",
+    "epsilon=1e-08\n",
+    "# Optimizer config\n",
     "theano.config.optimizer='fast_compile'\n",
     "theano.config.exception_verbosity='high'\n",
     "\n",
     "# Training parameters\n",
-    "batchsize = 500\n",
-    "num_epochs = 3\n",
+    "batchsize = 1000\n",
+    "num_epochs = 10\n",
     "record_per_iter = True  # save train and val loss/accuracy after each batch runthrough"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -98,6 +99,7 @@
      "text": [
       "('Data Set:', 'subset_48by32_5')\n",
       "('Num classes:', 5)\n",
+      "Batches: [0, 1, 2]\n",
       "Preparing Data Set....\n",
       "X: (90000, 32, 48, 3)\n",
       "Y: (90000,)\n",
@@ -199,64 +201,14 @@
       "Building network...\n",
       "Building a complex CNN...\n",
       "Compiling functions...\n",
+      "Using Update: nesterov_momentum\n",
       "Compiling Finished!\n"
      ]
     }
    ],
    "source": [
-    "# Prepare Theano variables for inputs and targets\n",
-    "input_var = Tensor.tensor4('inputs')\n",
-    "target_var = Tensor.ivector('targets')\n",
-    "\n",
-    "print('Building network...')\n",
-    "\n",
-    "# Create neural network model\n",
-    "\n",
-    "l_in, l_out = cnn_model.build_cnn(C, W, H, NUM_CLASSES, cnn_architecture=cnn_architecture, num_filters=num_filters, filter_width=filter_width, pool_width=pool_width, stride=stride_width, pad=padding, hidden_size=hidden_size, dropout=dropout_p, inputVar = input_var)\n",
-    "\n",
-    "print('Compiling functions...')\n",
-    "\n",
-    "# Create a loss expression for training, i.e., a scalar objective we want\n",
-    "    # to minimize (for our multi-class problem, it is the cross-entropy loss):\n",
-    "prediction = lasagne.layers.get_output(l_out)\n",
-    "loss = Tensor.nnet.categorical_crossentropy(prediction, target_var)\n",
-    "# loss = lasagne.objectives.categorical_crossentropy(prediction, target_var)\n",
-    "loss = loss.mean()\n",
-    "acc = Tensor.mean(Tensor.eq(Tensor.argmax(prediction, axis=1), target_var),\n",
-    "                  dtype=theano.config.floatX)\n",
-    "\n",
-    "# Return predictions in a function\n",
-    "pred_fn = theano.function([l_in.input_var], prediction)\n",
-    "\n",
-    " # Create update expressions for training, i.e., how to modify the\n",
-    "# parameters at each training step. Here, we'll use Stochastic Gradient\n",
-    "# Descent (SGD) with Nesterov momentum, but Lasagne offers plenty more.\n",
-    "params = lasagne.layers.get_all_params(l_out, trainable=True)\n",
-    "updates = lasagne.updates.nesterov_momentum(\n",
-    "        loss, params, learning_rate=LEARNING_RATE, momentum=MOMENTUM)\n",
-    "\n",
-    "\n",
-    "# Create a loss expression for validation/testing. The crucial difference\n",
-    "# here is that we do a deterministic forward pass through the network,\n",
-    "# disabling dropout layers.\n",
-    "test_prediction = lasagne.layers.get_output(l_out, deterministic=True)\n",
-    "# test_loss = lasagne.objectives.categorical_crossentropy(test_prediction, target_var)\n",
-    "test_loss = Tensor.nnet.categorical_crossentropy(test_prediction, target_var)\n",
-    "\n",
-    "test_loss = test_loss.mean()\n",
-    "# As a bonus, also create an expression for the classification accuracy:\n",
-    "test_acc = Tensor.mean(Tensor.eq(Tensor.argmax(test_prediction, axis=1), target_var),\n",
-    "                  dtype=theano.config.floatX)\n",
-    "\n",
-    " # Compile a function performing a training step on a mini-batch (by giving\n",
-    "# the updates dictionary) and returning the corresponding training loss:\n",
-    "train_fn = theano.function([input_var, target_var], [loss, acc], updates=updates)\n",
-    "# train_fn = theano.function([input_var, target_var], loss, updates=updates)\n",
-    "\n",
-    "# Compile a second function computing the validation loss and accuracy:\n",
-    "val_fn = theano.function([input_var, target_var], [test_loss, test_acc])\n",
-    "\n",
-    "print('Compiling Finished!')"
+    "# Create model and compile train and val functions\n",
+    "train_fn, val_fn = cnn_model.main_create_model(C, W, H, NUM_CLASSES, cnn_architecture=cnn_architecture, num_filters=num_filters, filter_width=filter_width, pool_width=pool_width, stride=stride_width, pad=padding, hidden_size=hidden_size, dropout=dropout_p, use_optimizer=USE_OPTIMIZER, learning_rate=LEARNING_RATE, momentum=MOMENTUM, beta1=beta1, beta2=beta2, epsilon=epsilon)"
    ]
   },
   {
@@ -264,84 +216,29 @@
    "execution_count": null,
    "metadata": {
     "collapsed": false,
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training on: 3 epochs of batch size 500 with num training samples 72000\n",
+      "Training on: 10 epochs of batch size 1000 with num training samples 72000\n",
+      "Using optimizer: nesterov_momentum\n",
       "Validation Size: 9000\n",
       "Starting training...\n",
-      "Ep 0 \titer 0  \tloss 48.83952, train acc 22.40, val acc 24.00"
+      "Ep 0 \titer 0  \tloss 1.61914, train acc 21.20, val acc 24.50\n",
+      "Ep 0 \titer 1  \tloss 1.61071, train acc 24.60, val acc 24.20\n",
+      "Ep 0 \titer 2  \tloss 1.64202, train acc 20.80, val acc 24.80\n",
+      "Ep 0 \titer 3  \tloss 1.65098, train acc 21.30, val acc 24.30\n",
+      "Ep 0 \titer 4  \tloss 1.62432, train acc 23.30, val acc 24.20\n",
+      "Ep 0 \titer 5  \tloss 1.60675, train acc 20.30, val acc 26.70"
      ]
     }
    ],
    "source": [
-    "# Finally, launch the training loop.\n",
-    "print ( 'Training on: {} epochs of batch size {} with num training samples {}'.format(num_epochs,batchsize,num_train) )\n",
-    "print (\"Validation Size: {}\".format(num_val) )\n",
-    "print(\"Starting training...\")\n",
-    "# We iterate over epochs:\n",
-    "train_err_list = []\n",
-    "val_err_list = []\n",
-    "train_acc_list = []\n",
-    "val_acc_list = []\n",
-    "for epoch in range(num_epochs):\n",
-    "    # 1) In each epoch, we do a full pass over the training data:\n",
-    "    train_err = 0\n",
-    "    train_acc = 0\n",
-    "    train_batches = 0\n",
-    "    start_time = time.time()\n",
-    "    \n",
-    "    # Each batch is 1 iteration\n",
-    "    num_iters = 0\n",
-    "    for batch in data_utils.iterate_minibatches(X_train, y_train, batchsize, shuffle=True):\n",
-    "        # For testing, limit num iterations\n",
-    "#         if num_iters >= 2:\n",
-    "#             break\n",
-    "        inputs, targets = batch\n",
-    "        iter_train_err, iter_train_acc = train_fn(inputs, targets)\n",
-    "#         prediction = pred_fn(inputs)\n",
-    "        train_err += iter_train_err\n",
-    "        train_acc += iter_train_acc\n",
-    "        train_batches += 1\n",
-    "        \n",
-    "        # Run validation on entire data set after each iteration, not iterating over mini batches of \n",
-    "        \n",
-    "        val_err, val_acc = val_fn(inputs, targets)\n",
-    "        \n",
-    "        if record_per_iter:\n",
-    "            train_err_list.append(iter_train_err)\n",
-    "            train_acc_list.append(iter_train_acc)\n",
-    "            val_err_list.append(val_err)\n",
-    "            val_acc_list.append(val_acc)\n",
-    "        \n",
-    "        print(\"Ep {} \\titer {}  \\tloss {:.5f}, train acc {:.2f}, val acc {:.2f}\".format(epoch, num_iters, float(iter_train_err), iter_train_acc * 100, val_acc *100 ))\n",
-    "        num_iters += 1\n",
-    "    \n",
-    "    # Then we print the results for this epoch:\n",
-    "    \n",
-    "    epoch_train_err = train_err / train_batches\n",
-    "    epoch_train_acc = train_acc / train_batches * 100\n",
-    "    epoch_val_err = val_err / 1\n",
-    "    epoch_val_acc = val_acc / 1 * 100\n",
-    "    \n",
-    "    print(\"Epoch {} of {} took {:.3f}s\".format(\n",
-    "        epoch + 1, num_epochs, time.time() - start_time))\n",
-    "    print(\"  training loss:\\t\\t{:.6f}\".format(epoch_train_err))\n",
-    "    print(\"  training accuracy:\\t\\t{:.2f} %\".format(epoch_train_acc))\n",
-    "    print(\"  validation loss:\\t\\t{:.6f}\".format(epoch_val_err))\n",
-    "    print(\"  validation accuracy:\\t\\t{:.2f} %\".format(epoch_val_acc))\n",
-    "    \n",
-    "    if not record_per_iter:\n",
-    "        train_err_list.append(epoch_train_err)\n",
-    "        train_acc_list.append(epoch_train_acc)\n",
-    "        val_err_list.append(epoch_val_err)\n",
-    "        val_acc_list.append(epoch_val_acc)\n",
-    "\n",
-    "print('Training finished!')"
+    "# Train the model.\n",
+    "train_err_list, train_acc_list, val_err_list, val_acc_list, epochs_train_err_list, epochs_train_acc_list, epochs_val_err_list, epochs_val_acc_list = cnn_model.train(num_epochs, batchsize, num_train, num_val, USE_OPTIMIZER, train_fn, val_fn, X_train, y_train, record_per_iter=record_per_iter)"
    ]
   },
   {
@@ -391,6 +288,22 @@
     "    data_set_name += \"_\"\n",
     "    data_set_name += str(batch_num)\n",
     "visualize.plot_loss_acc(data_set_name, train_err_list, train_acc_list, val_acc_list, LEARNING_RATE, reg_strength, num_epochs, num_train, xlabel=xlabel)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Visualize the loss and the accuracies for both training and validation sets for each epoch\n",
+    "num_train = X_train.shape[0]\n",
+    "xlabel = \"epochs\"\n",
+    "# Printing training losses and training + validation accuracies\n",
+    "data_set_name = DATA_SET + 'batch_' + str(USE_BATCH) + '_on_epochs' + '_' + USE_OPTIMIZER\n",
+    "visualize.plot_loss_acc(data_set_name, epochs_train_err_list, epochs_train_acc_list, epochs_val_acc_list, LEARNING_RATE, reg_strength, num_epochs, num_train, xlabel=xlabel)"
    ]
   },
   {
